--- a/lake_sale/build.gradle
+++ b/lake_sale/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.2'
@@ -27,6 +27,7 @@ allprojects {
 //    repositories {
 //        google()
 //        jcenter()
+//    mavenCentral()
 //    }
 
     //循环所有依赖，指定support的版本为28.0.0，解决重复包问题
@@ -47,8 +48,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-repositories {
-    google()
 }
