--- a/lake_sale/settings.gradle
+++ b/lake_sale/settings.gradle
@@ -4,3 +4,5 @@ rootProject.name = 'lake_sale'
   setBinding(new Binding([gradle: this])) 
   evaluate(new File('fbinclude_flutter.groovy')) 
   // [FLUTTER_CONFIG_END]
+include ':flutter_lib'
+project(':flutter_lib').projectDir = new File('../flutter_lib')
